--- a/chat.html
+++ b/chat.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css" integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Chat | Kakao Clone</title>
 </head>
 <body>
@@ -22,7 +23,7 @@
     <header class="header">
         <div class="header__header-column">
                 <a href="index.html" class="header__back-btn">
-                 <i class="fas fa-arrow-left fa-2x"></i>
+                 <i class="fas fa-arrow-left"></i>
                 </a>
             </div>
             <h1 class="header__title">Best Friend</h1>
@@ -31,9 +32,9 @@
             <span class="header__icon">
                 <i class="fas fa-search"></i>
             </span>
-            <div class="header__icon">
+            <span class="header__icon">
                 <i class="fas fa-bars"></i>
-            </div>
+            </span>
         </div>
     </header>
     <main class="chat">
