--- a/chat.html
+++ b/chat.html
@@ -62,7 +62,7 @@
     </main>
     <div class="chat__write">
         <div class="chat__write-column">
-            <i clas="far fa-plue.suare"></i>
+            <i class="far fa-plus-square"></i>
         </div>
         <div class="chat__write-column">
             <input type="text" placeholder="Send message" class="chat__write-input" />
