--- a/friend.html
+++ b/friend.html
@@ -53,10 +53,10 @@
             <h5 class="friends__title">Plus friend</h5>
             <div class="friends__friend friend">
                 <div class="friend__column">
-                <img src="images/avator.jpeg" alt="" class="g-avator friend__avator">
+                <img src="images/avator.jpeg" alt="" class="friend__avator">
                 <div class="friend__content">
                     <span class="friend__name">
-                        plus Friend
+                        Plus Friend
                     </span>
                 </div>
             </div>
@@ -66,7 +66,7 @@
             <h5 class="friend__title">Friends 14</h5>
                 <li class="friends__friend friend">
                     <div class="friend__column">
-                    <img src="images/avator.jpeg" alt="" class="g-avator friend__avator">
+                    <img src="images/avator.jpeg" alt="" class="friend__avator">
                     <div class="friend__content">
                         <span class="friend__name">
                             Seoyoung
