--- a/find.html
+++ b/find.html
@@ -76,7 +76,7 @@
             </h5>
             <li class="find__friend friend friend--lg">
                 <div class="friend__column">
-                <img src="images/avator.jpeg" alt="" class="g-avator friend__avator">
+                <img src="images/avator.jpeg" alt="" class="friend__avator">
                 <div class="friend__content">
                     <span class="friend__name">
                         Seoyoung
