--- a/index.html
+++ b/index.html
@@ -40,18 +40,24 @@
         <ul class="chats__list">
             <li class="chats__chat chat">
                 <a href="chat.html">
-                <div class="chat__column">
-                    <img class="chat__avator g-avator" src="images/young.jpg">
-                    <div class="chat__content">
-                        <span  class="chat__username">
-                            Seoyoung
-                        </span>
-                        <span class="chat__preview">Kakao intern seoyoung</span>
+                    <div class="chats__friend friend">
+                        <div class="friend__column">
+                        <img src="images/avator.jpeg" alt="" class="m-avator friend__avator">
+                        <div class="friend__content">
+                            <span class="friend__name">
+                                Dojun
+                            </span>
+                            <span class="friend__bottom-text">
+                                Seoyoung joha
+                            </span>
+                            </div>
+                        </div>
+                        <div class="friend__column">
+                            <div class="friend__now-listening">
+                                <span class="chat__timestamp">March 8</span>
+                            </div>
+                        </div>
                     </div>
-                </div>
-                <div class="chat__clomn">
-                    <span class="chat__timestamp">Yesterday</span>
-                </div>
                 </a>
             </li>
         </ul>
@@ -62,6 +68,7 @@
                 <i class="far fa-user"></i>
             </a></li>
             <li class="nav__list-item"><a href="index.html" class="nav__list-link">
+                <div class="nav__badge">8</div>
                 <i class="fas fa-comment"></i>
             </a></li>
             <li class="nav__list-item"><a href="find.html" class="nav__list-link">
