--- a/find.html
+++ b/find.html
@@ -70,11 +70,11 @@
                 </li>
             </ul>
         </header>
-        <ui class="find__recommeded">
+        <div class="find__recommended">
             <h5 class="find__title">
                 Recommended Friends
             </h5>
-            <li class="find__friend friend friend--lg">
+            <li class="find__friend friend">
                 <div class="friend__column">
                 <img src="images/avator.jpeg" alt="" class="friend__avator">
                 <div class="friend__content">
@@ -89,7 +89,7 @@
                     </div>
                 </div>
             </li>
-        </ui>
+        </div>
     </main>
     <nav class="nav">
         <ul class="nav__list">
