--- a/friend.html
+++ b/friend.html
@@ -22,7 +22,7 @@
     </div>
     <header class="header">
         <div class="header__header-column">
-            <h1 class="header__title">Friend</h1>
+            <h1 class="header__title">Friends</h1>
         </div>
         <div class="header__header-column">
             <span class="header__icon">
@@ -35,7 +35,7 @@
     </header>
     <main class="friends">
         <header class="friends__header">
-            <div class="friends__friend friend friend--lg">
+            <div class="friends__friend friend">
                 <div class="friend__column">
                 <img src="images/young.jpg" alt="" class="g-avator friend__avator">
                 <div class="friend__content">
@@ -49,7 +49,7 @@
                 </div>
             </div>
         </header>
-        <div class="friend__plus">
+        <div class="friends__plus">
             <h5 class="friends__title">Plus friend</h5>
             <div class="friends__friend friend">
                 <div class="friend__column">
@@ -79,9 +79,9 @@
                     <div class="friend__column">
                         <div class="friend__now-listening">
                             <span>
-                                Oh my girl!
+                                NON STOP - Oh my girl
+                                <i class="fas fa-play"></i>
                             </span>
-                            <i class="fas fa-play"></i>
                         </div>
                     </div>
                 </li>
