--- a/chat_scapy.html
+++ b/chat_scapy.html
@@ -26,7 +26,7 @@
                             <a href="index.html" class="header__back-btn">
                              <i class="left fas fa-arrow-left"></i>
                             </a>
-                            <h1 class="header__title">앙몬드</h1>
+                            <h1 class="header__title">스카피</h1>
                         </div>
                         <div class="header__header-column">
                             <span class="header__icon">
@@ -42,38 +42,38 @@
     </div>
     <main class="chat-screen">
         <ul class="chat__messages">
-            <span class="chat__timestamp">Monday, May 25, 2020</span>
+            <span class="chat__timestamp">Saturday, May 23, 2020</span>
             <li class="incoming-message message">
-                <img src="images/ang.jpg" class="g-avatar message__avatar" />
+                <img src="images/scapy.jpg" class="g-avatar message__avatar" />
                 <div class="message__content">
                     <span class="messega__bubble">
-                        주말에 놀러가자!
+                        밥 먹었어?
                     </span>
-                    <span class="message__author">앙몬드</span>
+                    <span class="message__author">스카피</span>
                 </div>
             </li>
             <li class="sent-message message">
                 <span class="message__timestamp"></span>
                 <div class="message__content">
                     <span class="messega__bubble">
-                        구래! 어디로 갈래?
+                        아닝 아직 안 먹었어! 이제 나갈거얌
                     </span>
                 </div>
             </li>
             <li class="incoming-message message">
-                <img src="images/ang.jpg" class="g-avatar message__avatar" />
+                <img src="images/scapy.jpg" class="g-avatar message__avatar" />
                 <div class="message__content">
                     <span class="messega__bubble">
-                        스카피도 데려갈래?
+                        나도 이제 출발!
                     </span>
-                    <span class="message__author">앙몬드</span>
+                    <span class="message__author">스카피</span>
                 </div>
             </li>
             <li class="sent-message message">
                 <span class="message__timestamp"></span>
                 <div class="message__content">
                     <span class="messega__bubble">
-                        셋이서 한강가쟈
+                        마스크 챙겨나가!
                     </span>
                 </div>
             </li>
