--- a/find.html
+++ b/find.html
@@ -76,10 +76,10 @@
             </h5>
             <li class="find__friend friend">
                 <div class="friend__column">
-                <img src="images/avator.jpeg" alt="" class="friend__avator">
+                <img src="images/cob.png" alt="" class="friend__avator">
                 <div class="friend__content">
                     <span class="friend__name">
-                        Seoyoung
+                        콥
                     </span>
                     </div>
                 </div>
@@ -97,6 +97,7 @@
                 <i class="far fa-user"></i>
             </a></li>
             <li class="nav__list-item"><a href="index.html" class="nav__list-link">
+                <div class="nav__badge">8</div>
                 <i class="far fa-comment"></i>
             </a></li>
             <li class="nav__list-item"><a href="find.html" class="nav__list-link">
@@ -107,5 +108,8 @@
             </a></li>
         </ul>
     </nav>
+    <div class="bigScreen">
+        <span class="bigScreen__text">Please make your screen small!</span>
+    </div>
 </body>
 </html>
