--- a/friend.html
+++ b/friend.html
@@ -37,13 +37,13 @@
         <header class="friends__header">
             <div class="friends__friend friend">
                 <div class="friend__column">
-                <img src="images/young.jpg" alt="" class="g-avator friend__avator">
+                <img src="images/main.jpg" alt="" class="g-avator friend__avator">
                 <div class="friend__content">
                     <span class="friend__name">
-                        Seoyoung
+                        죠르디
                     </span>
                     <span class="friend__status">
-                        I love dojun
+                        나는 취준공룡 죠르디
                     </span>
                 </div>
                 </div>
@@ -53,7 +53,7 @@
             <h5 class="friends__title">Plus friend</h5>
             <div class="friends__friend friend">
                 <div class="friend__column">
-                <img src="images/avator.jpeg" alt="" class="friend__avator">
+                <img src="images/plus.png" alt="" class="friend__avator">
                 <div class="friend__content">
                     <span class="friend__name">
                         Plus Friend
@@ -63,16 +63,16 @@
             </div>  
         </div>
         <ul class="friends__list">
-            <h5 class="friend__title">Friends 14</h5>
+            <h5 class="friend__title">Friends 3</h5>
                 <li class="friends__friend friend">
                     <div class="friend__column">
-                    <img src="images/avator.jpeg" alt="" class="friend__avator">
+                    <img src="images/ang.jpg" alt="" class="friend__avator">
                     <div class="friend__content">
                         <span class="friend__name">
-                            Seoyoung
+                            앙몬드
                         </span>
                         <span class="friend__status">
-                            I love dojun
+                            지켜보고있다. 죠르디
                         </span>
                         </div>
                     </div>
@@ -85,6 +85,32 @@
                         </div>
                     </div>
                 </li>
+                <li class="friends__friend friend">
+                    <div class="friend__column">
+                    <img src="images/scapy.jpg" alt="" class="friend__avator">
+                    <div class="friend__content">
+                        <span class="friend__name">
+                            스카피
+                        </span>
+                        <span class="friend__status">
+                            제 레스토랑 구경오세요!
+                        </span>
+                        </div>
+                    </div>
+                </li>
+                <li class="friends__friend friend">
+                    <div class="friend__column">
+                    <img src="images/beroni.png" alt="" class="friend__avator">
+                    <div class="friend__content">
+                        <span class="friend__name">
+                            베로니
+                        </span>
+                        <span class="friend__status">
+                            따뜻한 불이 좋아
+                        </span>
+                        </div>
+                    </div>
+                </li>
         </ul> 
     </main>
     <nav class="nav">
@@ -93,6 +119,7 @@
                 <i class="fas fa-user"></i>
             </a></li>
             <li class="nav__list-item"><a href="index.html" class="nav__list-link">
+                <div class="nav__badge">8</div>
                 <i class="far fa-comment"></i>
             </a></li>
             <li class="nav__list-item"><a href="find.html" class="nav__list-link">
@@ -103,5 +130,8 @@
             </a></li>
         </ul>
     </nav>
+    <div class="bigScreen">
+        <span class="bigScreen__text">Please make your screen small!</span>
+    </div>
 </body>
 </html>
