--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -42,19 +42,41 @@
                 <a href="chat.html">
                     <div class="chats__friend friend">
                         <div class="friend__column">
-                        <img src="images/avator.jpeg" alt="" class="m-avator friend__avator">
+                        <img src="images/ang.jpg" alt="" class="m-avator friend__avator">
                         <div class="friend__content">
                             <span class="friend__name">
-                                Dojun
+                                앙몬드
                             </span>
                             <span class="friend__bottom-text">
-                                Seoyoung joha
+                                셋이서 한강가쟈
                             </span>
                             </div>
                         </div>
                         <div class="friend__column">
-                            <div class="friend__now-listening">
-                                <span class="chat__timestamp">March 8</span>
+                            <div class="friend">
+                                <span class="chat__timestamp">May 25</span>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </li>
+            <li class="chats__chat chat">
+                <a href="chat_scapy.html">
+                    <div class="chats__friend friend">
+                        <div class="friend__column">
+                        <img src="images/scapy.jpg" alt="" class="m-avator friend__avator">
+                        <div class="friend__content">
+                            <span class="friend__name">
+                                스카피
+                            </span>
+                            <span class="friend__bottom-text">
+                                마스크 챙겨나가!
+                            </span>
+                            </div>
+                        </div>
+                        <div class="friend__column">
+                            <div class="friend">
+                                <span class="chat__timestamp">May 23</span>
                             </div>
                         </div>
                     </div>
@@ -64,7 +86,7 @@
     </main>
     <nav class="nav">
         <ul class="nav__list">
-            <li class="nav__list-item"><a href="friend.html" class="nav__list-link">
+            <li class="nav__list-item green"><a href="friend.html" class="nav__list-link">
                 <i class="far fa-user"></i>
             </a></li>
             <li class="nav__list-item"><a href="index.html" class="nav__list-link">
@@ -79,5 +101,8 @@
             </a></li>
         </ul>
     </nav>
+    <div class="bigScreen">
+        <span class="bigScreen__text">Please make your screen small!</span>
+    </div>
 </body>
 </html>
