--- a/setting.html
+++ b/setting.html
@@ -25,8 +25,9 @@
                 <a href="more.html" class="header__back-btn">
                  <i class="fas fa-arrow-left"></i>
                 </a>
+                <h1 class="header__title">Settings</h1>
             </div>
-            <h1 class="header__title">Settings</h1>
+            
         </div>
         <div class="header__header-column">
             <span class="header__icon">
@@ -57,6 +58,31 @@
             </li>
         </ul>
     </section>
+    <section class="settings__sections">
+        <ul class="settings__list">
+            <li class="settings__setting">
+                <span class="settings__icon">
+                    <i class="far fa-comment"></i>
+                </span>
+                <span class="settings__title">Chats</span>
+            </li>
+            <li class="settings__setting">
+                <span class="settings__icon">
+                    <i class="far fa-sun"></i>
+                </span>
+                <span class="settings__title">Display</span>
+            </li>
+            <li class="settings__setting">
+                <span class="settings__icon">
+                    <i class="fas fa-brush"></i>
+                </span>
+                <span class="settings__title">Themes</span>
+            </li>
+        </ul>
+    </section>
     </main>
+    <div class="bigScreen">
+        <span class="bigScreen__text">Please make your screen small!</span>
+    </div>
 </body>
 </html>
