--- a/more.html
+++ b/more.html
@@ -42,13 +42,13 @@
         <header class="more__header">
             <div class="friends__friend friend">
                 <div class="friend__column">
-                <img src="images/avator.jpeg" alt="" class="g-avator friend__avator">
+                <img src="images/main.jpg" alt="" class="g-avator friend__avator">
                 <div class="friend__content">
                     <span class="friend__name">
-                        Seoyoung
+                        죠르디
                     </span>
                     <span class="friend__status">
-                        young_6532@naver.com
+                        jordy@kakao.com
                     </span>
                     </div>
                 </div>
@@ -113,6 +113,7 @@
                 <i class="far fa-user"></i>
             </a></li>
             <li class="nav__list-item"><a href="index.html" class="nav__list-link">
+                <div class="nav__badge">8</div>
                 <i class="far fa-comment"></i>
             </a></li>
             <li class="nav__list-item"><a href="find.html" class="nav__list-link">
@@ -123,5 +124,8 @@
             </a></li>
         </ul>
     </nav>
+    <div class="bigScreen">
+        <span class="bigScreen__text">Please make your screen small!</span>
+    </div>
 </body>
 </html>
